--- a/package.json
+++ b/package.json
@@ -1,23 +1,77 @@
 {
-  "name": "arco-fast-table",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/hepeichun/arco-fast-table.git"
-  },
-  "keywords": [
-    "table",
-    "arco"
-  ],
-  "author": "hepeichun",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/hepeichun/arco-fast-table/issues"
-  },
-  "homepage": "https://github.com/hepeichun/arco-fast-table#readme"
+    "name": "arco-fast-table",
+    "version": "0.0.0",
+    "private": false,
+    "description": "",
+    "files": [
+        "dist"
+    ],
+    "type": "module",
+    "main": "./dist/vite-vue-lib-template.umd.cjs",
+    "module": "./dist/vite-vue-lib-template.js",
+    "types": "./dist/index.d.ts",
+    "author": "hepeichun",
+    "license": "Apache-2.0",
+    "keywords": [
+        "table",
+        "arco"
+    ],
+
+    "exports": {
+        ".": {
+            "import": "./dist/vite-vue-lib-template.js",
+            "require": "./dist/vite-vue-lib-template.umd.cjs"
+        },
+        "./*": "./dist/vite-vue-lib-template.js"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+        "format": "prettier .  --write --ignore-path .gitignore",
+        "prepare": "husky install",
+        "commit": "git-cz"
+    },
+    "dependencies": {
+        "vue": "^3.2.45"
+    },
+    "devDependencies": {
+        "@rushstack/eslint-patch": "^1.1.4",
+        "@types/node": "^18.11.12",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "@vue/eslint-config-prettier": "^7.0.0",
+        "@vue/eslint-config-typescript": "^11.0.0",
+        "@vue/tsconfig": "^0.1.3",
+        "cz-conventional-changelog": "3.3.0",
+        "eslint": "^8.22.0",
+        "eslint-plugin-vue": "^9.3.0",
+        "husky": "^8.0.0",
+        "lint-staged": "^13.1.0",
+        "npm-run-all": "^4.1.5",
+        "pathe": "^1.1.0",
+        "prettier": "^2.7.1",
+        "typescript": "~4.7.4",
+        "vite": "^4.0.0",
+        "vite-plugin-dts": "^1.7.1",
+        "vue-tsc": "^1.0.12",
+        "semantic-release": "^20.1.0"
+    },
+    "lint-staged": {
+        "*.{js,ts,vue}": "eslint --fix",
+        "*.{js,ts,vue,css,scss,json,md}": "prettier --write"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/hepeichun/arco-fast-table.git"
+    },
+    "bugs": {
+        "url": "https://github.com/hepeichun/arco-fast-table/issues"
+    },
+    "homepage": "https://github.com/hepeichun/arco-fast-table#readme"
 }
