--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "table",
         "arco"
     ],
-
     "exports": {
         ".": {
             "import": "./dist/vite-vue-lib-template.js",
@@ -34,6 +33,8 @@
         "commit": "git-cz"
     },
     "dependencies": {
+        "@arco-design/web-vue": "^2.46.0",
+        "dayjs": "^1.11.7",
         "vue": "^3.2.45"
     },
     "devDependencies": {
@@ -51,11 +52,11 @@
         "npm-run-all": "^4.1.5",
         "pathe": "^1.1.0",
         "prettier": "^2.7.1",
+        "semantic-release": "^20.1.0",
         "typescript": "~4.7.4",
         "vite": "^4.0.0",
         "vite-plugin-dts": "^1.7.1",
-        "vue-tsc": "^1.0.12",
-        "semantic-release": "^20.1.0"
+        "vue-tsc": "^1.0.12"
     },
     "lint-staged": {
         "*.{js,ts,vue}": "eslint --fix",
